# ER-Wait-Time

./: .gitignore  README.md  config.py  main.py  mlflow.db  pyproject.toml  render.yaml  requirements.txt
backend/: main.py  mlflow.db  model_registry_be.py  pyproject.toml  requirements.txt
backend/routers/: data.py  experiments.py  mlflow_runs.py  predict.py  train.py
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/pages/: Comparison.jsx  Dashboard.jsx  DataPage.jsx  Experiments.jsx  Predict.jsx  Training.jsx
frontend/src/services/: api.js
src/: data_loader.py  evaluate.py  mlflow.db  preprocessing.py  train.py  visualize.py
