[project]
name = "projet-urgences"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "joblib>=1.5.3",
    "pandas>=3.0.2",
    "python-multipart>=0.0.24",
    "uvicorn>=0.44.0",
]

[tool.uv.workspace]
members = [
    "backend",
]
